@@ -4,16 +4,14 @@
   <parent>
     <groupId>de.regatta-hd</groupId>
     <artifactId>regatta-hd</artifactId>
-    <version>0.1.18</version>
+    <version>0.1.24</version>
   </parent>
 
   <artifactId>ui</artifactId>
   <name>Regatta HD - User Interface</name>
 
   <properties>
-    <mainClass>de.regatta_hd.ui.Main</mainClass>
-    <jnlp.build.directory>${project.build.directory}/jnlp</jnlp.build.directory>
-    <archives.directory>${jnlp.build.directory}/lib</archives.directory>
+    <mainClass>de.regatta_hd.ui.RegattaHD</mainClass>
   </properties>
 
   <dependencies>
@@ -41,14 +39,6 @@
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.controlsfx</groupId>
-      <artifactId>controlsfx</artifactId>
-    </dependency>
 
     <!-- cross-platform fat jar -->
     <dependency>
@@ -67,6 +57,10 @@
       <classifier>mac</classifier>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
@@ -100,90 +94,9 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <configuration>
           <mainClass>${mainClass}</mainClass>
-          <options>
-            <option>--add-opens</option>
-            <option>java.base/java.lang=com.google.guice</option>
-          </options>
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>webstart-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>build-jnlp</id>
-            <phase>package</phase>
-            <goals>
-              <goal>jnlp</goal>
-            </goals>
-            <configuration>
-              <filenameMapping>full</filenameMapping>
-              <libPath>lib</libPath>
-              <outputJarVersions>false</outputJarVersions>
-              <makeArchive>false</makeArchive>
-              <jnlp>
-                <outputFile>regatta-hd.jnlp</outputFile>
-                <inputTemplate>template.vm</inputTemplate>
-                <mainClass>${mainClass}</mainClass>
-              </jnlp>
-            </configuration>
-          </execution>
-        </executions>
-
-        <dependencies>
-          <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/keytool-api -->
-          <dependency>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>keytool-api-1.7</artifactId>
-            <version>1.5</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-
-      <!-- ======================= -->
-      <!-- additional deploy steps -->
-      <!-- ======================= -->
-      <plugin>
-        <artifactId>maven-jarsigner-plugin</artifactId>
-        <configuration>
-          <archiveDirectory>${archives.directory}</archiveDirectory>
-          <keystore>keystore.jks</keystore>
-          <alias>selfsigned</alias>
-          <storepass>password</storepass>
-          <keypass>password</keypass>
-        </configuration>
-        <executions>
-          <execution>
-            <id>sign</id>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-            <phase>deploy</phase>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>de.ofterdinger.maven.plugins</groupId>
-        <artifactId>site-maven-plugin</artifactId>
-        <version>0.1.0</version>
-        <configuration>
-          <server>github-upload</server>
-          <message>Creating site for ${project.version}</message>
-          <repositoryOwner>Heidelberger-Regattaverband</repositoryOwner>
-          <repositoryName>download</repositoryName>
-          <outputDirectory>${jnlp.build.directory}</outputDirectory>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>site</goal>
-            </goals>
-            <phase>deploy</phase>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
 </project>
